Done Services Section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
 
+    <!-- responsive Tabs CSS -->
+    <link rel="stylesheet" href="css/responsive-tabs/responsive-tabs.css">
+
     <!--Custom css-->
     <link rel="stylesheet" href="css/style.css">
 
@@ -471,6 +474,7 @@
     <!-- Serivces  -->
     <section id="services">
 
+        <!-- Services 01 -->
         <div id="services-01">
 
             <div class="content-box-lg">
@@ -481,10 +485,10 @@
 
                         <div class="col-md-12 text-center">
 
-                                <div class="horizontal-heading">
-                                    <h5>What We Do</h5>
-                                    <h2>Our Serices</h2>
-                                </div>
+                            <div class="horizontal-heading">
+                                <h5>What We Do</h5>
+                                <h2>Our Serices</h2>
+                            </div>
 
                         </div>
 
@@ -503,16 +507,16 @@
                             <!-- Service 01 -->
                             <div class="service">
                                 <div class="row">
-                                    <div class="col-md-2">                                      
+                                    <div class="col-md-2">
                                         <div class="icon text-right">
                                             <i class="fa fa-paint-brush"></i>
-                                        </div>                                    
+                                        </div>
                                     </div>
-                                    <div class="col-md-10 "> 
+                                    <div class="col-md-10 ">
                                         <h5>Service 01</h5>
                                         <h4>Web Design</h4>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                             Voluptates eum omnis nihil eius facere, modi fugiat, alias.
+                                            Voluptates eum omnis nihil eius facere, modi fugiat, alias.
                                         </p>
                                     </div>
                                 </div>
@@ -521,16 +525,16 @@
                             <!-- Service 02 -->
                             <div class="service">
                                 <div class="row">
-                                    <div class="col-md-2">                                      
+                                    <div class="col-md-2">
                                         <div class="icon text-right">
                                             <i class="fa fa-laptop"></i>
-                                        </div>                                    
+                                        </div>
                                     </div>
-                                    <div class="col-md-10 "> 
+                                    <div class="col-md-10 ">
                                         <h5>Service 02</h5>
                                         <h4>Web Development</h4>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                             Voluptates eum omnis nihil eius facere, modi fugiat, alias.
+                                            Voluptates eum omnis nihil eius facere, modi fugiat, alias.
                                         </p>
                                     </div>
                                 </div>
@@ -539,16 +543,16 @@
                             <!-- Service 03 -->
                             <div class="service">
                                 <div class="row">
-                                    <div class="col-md-2">                                      
+                                    <div class="col-md-2">
                                         <div class="icon text-right">
                                             <i class="fa fa-paper-plane-o"></i>
-                                        </div>                                    
+                                        </div>
                                     </div>
-                                    <div class="col-md-10 "> 
+                                    <div class="col-md-10 ">
                                         <h5>Service 03</h5>
                                         <h4>Digital Marketing</h4>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                             Voluptates eum omnis nihil eius facere, modi fugiat, alias.
+                                            Voluptates eum omnis nihil eius facere, modi fugiat, alias.
                                         </p>
                                     </div>
                                 </div>
@@ -562,6 +566,146 @@
             </div>
 
         </div>
+        <!-- Services 01 End -->
+
+        <!-- Services 02 -->
+        <div id="services-02">
+            <div class="content-box-md">
+                <div id="services-tabs">
+                    <ul class="text-center">
+                        <li><a href="#service-tab-1">Creativity</a></li>
+                        <li><a href="#service-tab-2">Strategy</a></li>
+                        <li><a href="#service-tab-3">Design</a></li>
+                        <li><a href="#service-tab-4">Development</a></li>
+                    </ul>
+
+                    <!-- Service Tab 01 -->
+
+                    <div id="service-tab-1" class="service-tab">
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="img/services/service-tab-img-01.jpg" alt="Creativity">
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="tab-bg">
+                                        <h2>01</h2>
+                                        <h3>Get More From Life with Creativity.</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            Provident nostrum reiciendis temporibus, corporis officia quae
+                                            possimus repudiandae quo dolore blanditiis sed magni ullam harum.
+                                        </p>
+
+                                        <div id="services-02-btn">
+                                            <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch"
+                                                role="button">Get In Touch</a>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- Service Tab 02 -->
+
+                    <div id="service-tab-2" class="service-tab">
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="img/services/service-tab-img-02.jpg" alt="Creativity">
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="tab-bg">
+                                        <h2>02</h2>
+                                        <h3>The Home Of Strategy.</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            Provident nostrum reiciendis temporibus, corporis officia quae
+                                            possimus repudiandae quo dolore blanditiis sed magni ullam harum.
+                                        </p>
+
+                                        <div id="services-02-btn">
+                                            <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch"
+                                                role="button">Get In Touch</a>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- Service Tab 03 -->
+
+                    <div id="service-tab-3" class="service-tab">
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="img/services/service-tab-img-03.jpg" alt="Creativity">
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="tab-bg">
+                                        <h2>03</h2>
+                                        <h3>Design To Play It Safe.</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            Provident nostrum reiciendis temporibus, corporis officia quae
+                                            possimus repudiandae quo dolore blanditiis sed magni ullam harum.
+                                        </p>
+
+                                        <div id="services-02-btn">
+                                            <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch"
+                                                role="button">Get In Touch</a>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- Service Tab 04 -->
+
+                    <div id="service-tab-4" class="service-tab">
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="img/services/service-tab-img-04.jpg" alt="Creativity">
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="tab-bg">
+                                        <h2>04</h2>
+                                        <h3>From Our Development To Yours.</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            Provident nostrum reiciendis temporibus, corporis officia quae
+                                            possimus repudiandae quo dolore blanditiis sed magni ullam harum.
+                                        </p>
+
+                                        <div id="services-02-btn">
+                                            <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch"
+                                                role="button">Get In Touch</a>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Services 02 End -->
+
+
 
     </section>
     <!-- Services End -->
@@ -603,8 +747,12 @@
     <!-- Way points -->
     <script src="js/waypoints/jquery.waypoints.min.js"></script>
 
+    <!-- Responsive Tabs JS -->
+    <script src="js/responsive-tabs/jquery.responsiveTabs.min.js"></script>
+
     <!-- Java Scrip link  -->
     <script src="js/script.js"></script>
+
 </body>
 
 
