--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                             <div id="about-left">
 
-                                <div class="vartical-heading">
+                                <div class="vertical-heading">
                                     <h5>Who We Are</h5>
                                     <h2>A <strong>Story</strong> <br> About Us</h2>
                                 </div>
@@ -211,7 +211,7 @@
                     <div class="col-md-6">
                         <div id="team-left">
 
-                            <div class="vartical-heading">
+                            <div class="vertical-heading">
                                 <h5>Who We Are</h5>
                                 <h2>Meet Our <br> <strong>Talented</strong> Team</h2>
                             </div>
@@ -487,7 +487,7 @@
 
                             <div class="horizontal-heading">
                                 <h5>What We Do</h5>
-                                <h2>Our Serices</h2>
+                                <h2>Our Services</h2>
                             </div>
 
                         </div>
@@ -709,6 +709,260 @@
 
     </section>
     <!-- Services End -->
+
+
+    <!-- portfolio -->
+    <section id="portfolio">
+
+        <div class="content-box-md">
+
+            <div class="container">
+
+                <div class="row">
+
+                    <div class="col-md-12">
+
+                        <div class="vertical-heading">
+                            <h5>Find Out Work</h5>
+                            <h2>Our <br>Amazing<strong> Work</strong></h2>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- Portfolio Items Wrapper -->
+            <Section id="portfolio">
+                <div class="container-fluid">
+
+                    <div class="row">
+
+                        <div id="*-container">
+
+                            <div class="col-md-3">
+
+                                <!-- Portfoliio Item 01 -->
+                                <div class="portfolio-item">
+
+                                    <a href="img/portfolio/001.jpg" title="Add Description">
+                                        <img src="img/portfolio/001.jpg" class="img-responsive" alt="portfolio 01">
+                                        <div class="portfolio-itme-overlay">
+                                            <div class="portfolio-item-details text-center">
+
+                                                <!-- item Header -->
+                                                <h3>Logo</h3>
+
+                                                <!-- Item Strips -->
+                                                <span></span>
+
+                                                <!-- Item Description -->
+                                                <p> Desktop, Design</p>
+
+                                            </div>
+
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3">
+
+                                <!-- Portfoliio Item 02 -->
+                                <div class="portfolio-item">
+
+                                    <a href="img/portfolio/002.jpg" title="Add Description">
+                                        <img src="img/portfolio/002.jpg" class="img-responsive" alt="portfolio 02">
+                                        <div class="portfolio-itme-overlay">
+                                            <div class="portfolio-item-details text-center">
+
+                                                <!-- item Header -->
+                                                <h3>Photoshop</h3>
+
+                                                <!-- Item Strips -->
+                                                <span></span>
+
+                                                <!-- Item Description -->
+                                                <p> Web Desgn, Illustration</p>
+
+                                            </div>
+
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+
+                                <!-- Portfoliio Item 03 -->
+                                <div class="portfolio-item">
+
+                                    <a href="img/portfolio/003.jpg" title="Add Description">
+                                        <img src="img/portfolio/003.jpg" class="img-responsive" alt="portfolio 03">
+                                        <div class="portfolio-itme-overlay">
+                                            <div class="portfolio-item-details text-center">
+
+                                                <!-- item Header -->
+                                                <h3>Web Design</h3>
+
+                                                <!-- Item Strips -->
+                                                <span></span>
+
+                                                <!-- Item Description -->
+                                                <p> Video, Web</p>
+
+                                            </div>
+
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+
+                                <!-- Portfoliio Item 04 -->
+                                <div class="portfolio-item">
+
+                                    <a href="img/portfolio/004.jpg" title="Add Description">
+                                        <img src="img/portfolio/004.jpg" class="img-responsive" alt="portfolio 04">
+                                        <div class="portfolio-itme-overlay">
+                                            <div class="portfolio-item-details text-center">
+
+                                                <!-- item Header -->
+                                                <h3>Logo</h3>
+
+                                                <!-- Item Strips -->
+                                                <span></span>
+
+                                                <!-- Item Description -->
+                                                <p> Desktop, Design</p>
+
+                                            </div>
+
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+
+                                <!-- Portfoliio Item 05 -->
+                                <div class="portfolio-item">
+
+                                    <a href="img/portfolio/005.jpg" title="Add Description">
+                                        <img src="img/portfolio/005.jpg" class="img-responsive" alt="portfolio 05">
+                                        <div class="portfolio-itme-overlay">
+                                            <div class="portfolio-item-details text-center">
+
+                                                <!-- item Header -->
+                                                <h3>Photoshop</h3>
+
+                                                <!-- Item Strips -->
+                                                <span></span>
+
+                                                <!-- Item Description -->
+                                                <p> Web Design, Illustration</p>
+
+                                            </div>
+
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+
+                                <!-- Portfoliio Item 06 -->
+                                <div class="portfolio-item">
+
+                                    <a href="img/portfolio/006.jpg" title="Add Description">
+                                        <img src="img/portfolio/006.jpg" class="img-responsive" alt="portfolio 06">
+                                        <div class="portfolio-itme-overlay">
+                                            <div class="portfolio-item-details text-center">
+
+                                                <!-- item Header -->
+                                                <h3>Logo</h3>
+
+                                                <!-- Item Strips -->
+                                                <span></span>
+
+                                                <!-- Item Description -->
+                                                <p> Desktop, Design</p>
+
+                                            </div>
+
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+
+                                <!-- Portfoliio Item 07 -->
+                                <div class="portfolio-item">
+
+                                    <a href="img/portfolio/007.jpg" title="Add Description">
+                                        <img src="img/portfolio/007.jpg" class="img-responsive" alt="portfolio 07">
+                                        <div class="portfolio-itme-overlay">
+                                            <div class="portfolio-item-details text-center">
+
+                                                <!-- item Header -->
+                                                <h3>Photoshop</h3>
+
+                                                <!-- Item Strips -->
+                                                <span></span>
+
+                                                <!-- Item Description -->
+                                                <p> Web Design, Illustration</p>
+
+                                            </div>
+
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+
+                                <!-- Portfoliio Item 08 -->
+                                <div class="portfolio-item">
+                                        
+                                    <a href="img/portfolio/008.jpg" title="Add Description">
+                                        <img src="img/portfolio/008.jpg" class="img-responsive" alt="portfolio 08"> 
+                                        <div class="portfolio-itme-overlay">
+                                            <div class="portfolio-item-details text-center">
+
+                                                <!-- item Header -->
+                                                <h3>Mobile Design</h3>
+
+                                                <!-- Item Strips -->
+                                                <span></span>
+
+                                                <!-- Item Description -->
+                                                <p> Video, Web</p>
+
+                                            </div>
+
+                                        </div> 
+
+                                    </a>
+                                </div>
+                            </div>
+
+
+                        </div>
+
+                    </div>
+
+                </div>
+            </Section>
+
+        </div>
+
+    </section>
+    <!-- Portfolio End -->
 
 
 
