--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
             <Section id="portfolio">
                 <div class="container-fluid">
 
-                    <div class="row">
+                    <div class="row no-gutters">
 
                         <div id="*-container">
 
