added magnific popup plugin

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <!-- responsive Tabs CSS -->
     <link rel="stylesheet" href="css/responsive-tabs/responsive-tabs.css">
 
+    <!-- Magnific Popup -->
+    <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
+
     <!--Custom css-->
     <link rel="stylesheet" href="css/style.css">
 
@@ -1023,6 +1026,9 @@
 
     <!-- Isotope  -->
     <script src="js/isotope/isotope.pkgd.min.js"></script>
+
+    <!-- Magnific Popup -->
+    <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Java Scrip link  -->
     <script src="js/script.js"></script>
