design overlay properties

--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
                                                 <span></span>
 
                                                 <!-- Item Description -->
-                                                <p> Web Desgn, Illustration</p>
+                                                <p> Web Design, Illustration</p>
 
                                             </div>
 
