--- a/index.html
+++ b/index.html
@@ -984,7 +984,170 @@
     </section>
     <!-- Portfolio End -->
 
-    
+
+    <!-- Testimonials -->
+    <section id="testimonials">
+
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-md-4">
+
+                    <div class="vertical-heading">
+                        <h5>Who We Are</h5>
+                        <h2>What Our <br> <strong>Customers</strong> Say</h2>
+                    </div>
+
+                </div>
+
+                <div class="col-md-8">
+
+                    <div id="testimonial-slider" class="owl-carousel owl-theme">
+                        <!-- Testimonial 01 -->
+                        <div class="testimonial">
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3>Quality Support</h3>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="stars text-right">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Quia dolorum laudantium, sapiente corporis et similique facere a molestias,
+                                dolor perferendis consequatur numquam accusamus.
+                                Temporibus ipsa impedit cum magni molestiae? Voluptate?
+                            </p>
+                            <div class="author">
+                                <div class="row">
+                                    <div class="col-md-2">
+                                        <img src="img/testimonial/client-1.jpg" alt="client"
+                                            class="img-responsive img-circle">
+                                    </div>
+                                    <div class="col-md-10">
+                                        <div class="author-name-des">
+                                            <p>Sohan Dewan</p>
+                                            <p>Senior Developer</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Testimonial 02 -->
+                        <div class="testimonial">
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3> Quality Support</h3>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="stars text-right">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Quia dolorum laudantium, sapiente corporis et similique facere a molestias,
+                                dolor perferendis consequatur numquam accusamus.
+                                Temporibus ipsa impedit cum magni molestiae? Voluptate?
+                            </p>
+
+                            <div class="author">
+                                <div class="row">
+
+                                    <div class="col-md-2">
+                                        <img src="img/testimonial/client-2.jpg" alt="client"
+                                            class="img-responsive img-circle">
+                                    </div>
+
+                                    <div class="col-md-10">
+
+                                        <div class="author-name-des">
+                                            <p>Rakib Ahmed</p>
+                                            <p>Senior Developer</p>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <!-- Testimonial 03 -->
+                        <div class="testimonial">
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3>Quality Support</h3>
+
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="stars text-right">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Quia dolorum laudantium, sapiente corporis et similique facere a molestias,
+                                dolor perferendis consequatur numquam accusamus.
+                                Temporibus ipsa impedit cum magni molestiae? Voluptate?
+                            </p>
+
+                            <div class="author">
+                                <div class="row">
+
+                                    <div class="col-md-2">
+                                        <img src="img/testimonial/client-3.jpg" alt="client"
+                                            class="img-responsive img-circle">
+                                    </div>
+
+                                    <div class="col-md-10">
+
+                                        <div class="author-name-des">
+                                            <p>Joq Martin</p>
+                                            <p>Senior Developer</p>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+    <!--  End -->
+
 
 
 
