--- a/index.html
+++ b/index.html
@@ -311,7 +311,6 @@
                                                 <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                             </ul>
 
-
                                         </div>
                                     </div>
                                 </div>
@@ -603,7 +602,6 @@
                                         <div id="services-02-btn">
                                             <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch"
                                                 role="button">Get In Touch</a>
-
                                         </div>
                                     </div>
                                 </div>
@@ -997,7 +995,7 @@
 
                     <div class="vertical-heading">
                         <h5>Who We Are</h5>
-                        <h2>What Our <br> <strong>Customers</strong> Say</h2>
+                        <h2>What Our<br><strong>Customers</strong>Say</h2>
                     </div>
 
                 </div>
@@ -1150,6 +1148,151 @@
 
 
 
+    <!-- Pricing -->
+    <section id="pricing">
+
+        <div class="content-box-*">
+
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <div class="horizontal-heading">
+                            <h5>Lovely Customers</h5>
+                            <h2>Our Pricing</h2>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row">
+
+                    <div class="col-md-4">
+
+                        <!-- Pricing Table 01 -->
+                        <div class="pricing-table">
+                            <div class="type">
+                                <h4>Basic</h4>
+                            </div>
+
+                            <div class="price">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <h2><span class="dollar"> &#36;</span>29 <br><span class="month">Month</span>
+                                        </h2>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <p>You will get all these awesome services with this great price. Get it Now!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <ul class="package">
+                                <li><i class="fa fa-check"></i>Full access</li>
+                                <li><i class="fa fa-check"></i>Unlimited Bandwidth</li>
+                                <li><i class="fa fa-check"></i>Powerful Admin Panel</li>
+                                <li><i class="fa fa-check"></i>Email Account</li>
+                                <li><i class="fa fa-check"></i>10 Free Web Sites</li>
+                            </ul>
+
+                            <div id="pricing-btn">
+                                <a class="btn btn-general btn-yellow" href="#" title="Get Started" role="button">Get
+                                    Started</a>
+                            </div>
+
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-4">
+
+                        <!-- Pricing Table 02 -->
+                        <div class="pricing-table black">
+                            <div class="type">
+                                <h4>Unlimited</h4>
+                            </div>
+
+                            <div class="price">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <h2><span class="dollar">&#36;</span>57 <br><span class="month">Month</span>
+                                        </h2>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <p>You will get all these awesome services with this great price. Get it Now!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <ul class="package">
+                                <li><i class="fa fa-check"></i>Full access</li>
+                                <li><i class="fa fa-check"></i>Unlimited Bandwidth</li>
+                                <li><i class="fa fa-check"></i>Powerful Admin Panel</li>
+                                <li><i class="fa fa-check"></i>Email Account</li>
+                                <li><i class="fa fa-check"></i>10 Free Web Sites</li>
+                            </ul>
+
+                            <div id="pricing-btn">
+                                <a class="btn btn-general btn-white" href="#" title="Get Started" role="button">Get
+                                    Started</a>
+                            </div>
+
+
+                        </div>
+
+
+                    </div>
+                    <div class="col-md-4">
+
+                        <!-- Pricing Table 03 -->
+                        <div class="pricing-table">
+                            <div class="type">
+                                <h4>Professional</h4>
+                            </div>
+
+                            <div class="price">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <h2><span class="dollar"> &#36;</span>96 <br><span class="month">Month</span>
+                                        </h2>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <p>You will get all these awesome services with this great price. Get it Now!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <ul class="package">
+                                <li><i class="fa fa-check"></i>Full access</li>
+                                <li><i class="fa fa-check"></i>Unlimited Bandwidth</li>
+                                <li><i class="fa fa-check"></i>Powerful Admin Panel</li>
+                                <li><i class="fa fa-check"></i>Email Account</li>
+                                <li><i class="fa fa-check"></i>10 Free Web Sites</li>
+                            </ul>
+
+                            <div id="pricing-btn">
+                                <a class="btn btn-general btn-yellow" href="#" title="Get Started" role="button">Get
+                                    Started</a>
+                            </div>
+
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+            </div>
+
+        </div>
+
+    </section>
+    <!--  End -->
 
 
 
