--- a/index.html
+++ b/index.html
@@ -1547,7 +1547,121 @@
         </div>
 
     </section>
-    <!--  End -->
+    <!-- Blog End -->
+
+    <!-- Contact -->
+    <section id="contact">
+
+        <div class="content-box-md">
+
+            <div class="container">
+
+                <div class="row">
+
+                    <div class="col-md-6">
+                        <!-- Contact Left -->
+                        <div id="contact-left">
+                            <div class="vertical-heading">
+                                <h5>Who We Are</h5>
+                                <h2>Get<br>In <strong>Touch</strong></h2>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis perspiciatis doloremque
+                                veniam iure. Nobis similique consectetur earum!
+                            </p>
+                            <div id="offices">
+
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="office">
+                                            <h4>Bangladesh</h4>
+                                            <ul class="office-details">
+                                                <li><i class="fa fa-mobile"></i>+8801815718918</li>
+                                                <li><i class="fa fa-envelope-o"></i>mdrezvee@gmail.com</li>
+                                                <li><i class="fa fa-map-marker"></i><span>112,Arman khan Goli, 9/A,
+                                                        Dhanmodi,Dhaka-1209</span></li>
+                                            </ul>
+
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="office">
+                                            <h4>Bangladesh</h4>
+                                            <ul class="office-details">
+                                                <li><i class="fa fa-mobile"></i>+8801622908030</li>
+                                                <li><i class="fa fa-envelope-o"></i>mdrezvee03@gmail.com</li>
+                                                <li><i class="fa fa-map-marker"></i><span>112,Chairman Goli, 9/A,
+                                                        Dhanmodi,Dhaka-1209</span></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <ul class="social-list">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                            </ul>
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-6">
+                        <!-- Contact Right -->
+                        <div id="contact-right">
+                            <form>
+                                <h4>Send Message</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input type="email" class="form-control" id="email"
+                                                placeholder="Email Address">
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" id="phone" placeholder="Phoen No.">
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input type="Text" class="form-control" id="subject" placeholder="Subject">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <textarea class="form-control" id="message" placeholder="Message"></textarea>
+                                </div>
+
+                                <div id="submit-btn">
+                                    <a class="btn btn-general btn-yellow" href="#" title="Submit"
+                                        role="button">Submit</a>
+                                </div>
+                            </form>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+    <!-- Contact End -->
 
 
 
