--- a/index.html
+++ b/index.html
@@ -1662,6 +1662,21 @@
 
     </section>
     <!-- Contact End -->
+    
+    
+<!-- Google map -->
+    <section id="google-map">
+        <div class="container-fluid">
+            <div class="row">
+                <div id="map">
+
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+<!-- Google Mag Ends -->
 
 
 
@@ -1707,6 +1722,11 @@
     <!-- Counter -->
     <script src="js/counter/jquery.counterup.min.js"></script>
 
+    <!-- Google map js -->
+
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0Z5SCQ-9QmEiSDC33DW37nUPMuIUNd0g&callback=initMap">
+    </script>
     <!-- Java Scrip link  -->
     <script src="js/script.js"></script>
 
