--- a/index.html
+++ b/index.html
@@ -1725,7 +1725,7 @@
     <!-- Google map js -->
 
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0Z5SCQ-9QmEiSDC33DW37nUPMuIUNd0g&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTvQQzglGUKwhoVJu2nbQWzXgP2TL0Y8o">
     </script>
     <!-- Java Scrip link  -->
     <script src="js/script.js"></script>
