--- a/index.html
+++ b/index.html
@@ -1662,9 +1662,9 @@
 
     </section>
     <!-- Contact End -->
-    
-    
-<!-- Google map -->
+
+
+    <!-- Google map -->
     <section id="google-map">
         <div class="container-fluid">
             <div class="row">
@@ -1676,26 +1676,29 @@
         </div>
     </section>
 
-<!-- Google Mag Ends -->
+    <!-- Google Mag Ends -->
 
 
 
+    <!-- Footer -->
+    <footer class="text-center">
 
+        <div class="container">
+            <div class="row">
 
+                <div class="col-md-12">
 
+                    <p>
+                        Copyright &copy; 2020 All Right Reserved By <span>SOLO Inl.</span>
+                    </p>
+                </div>
 
-    <section>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    </section>
+            </div>
+        </div>
+
+    </footer>
+    <!-- Footer End -->
+
 
 
     <!-- Jquer link  -->
@@ -1724,14 +1727,11 @@
 
     <!-- Google map js -->
 
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTvQQzglGUKwhoVJu2nbQWzXgP2TL0Y8o">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTvQQzglGUKwhoVJu2nbQWzXgP2TL0Y8o">
     </script>
     <!-- Java Scrip link  -->
     <script src="js/script.js"></script>
 
 </body>
-
-
 
 </html>
