--- a/index.html
+++ b/index.html
@@ -46,6 +46,41 @@
     <div id="preloader">
         <div id="status">&nbsp;</div>
     </div>
+    <!-- Preloader End -->
+
+    <!-- Header -->
+    <header>
+        <nav class="navbar navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="site-nav-wrapper">
+
+                    <div class="navbar-header">
+                        <!-- Logo -->
+                        <a href="#home" class="navbar-brand">
+                            <img src="img/logo/logo.png" alt="logo">
+                        </a>
+                    </div>
+
+                    <!-- Main Menu -->
+                    <div class="container">
+                        <div class="collapse navbar-collapse">
+                            <ul class="nav navbar-nav pull-right">
+                                <li><a href="#home">Home</a></li>
+                                <li><a href="#about">About</a></li>
+                                <li><a href="#team">Team</a></li>
+                                <li><a href="#services">Services</a></li>
+                                <li><a href="#portfolio">Work</a></li>
+                                <li><a href="#blog">Blog</a></li>
+                                <li><a href="#contact">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- Header -->
 
     <!-- Home -->
     <section id="home">
@@ -705,9 +740,6 @@
         </div>
 
         <!-- Services 02 End -->
-
-
-
     </section>
     <!-- Services End -->
 
@@ -1144,7 +1176,7 @@
         </div>
 
     </section>
-    <!--  End -->
+    <!-- Testimonial End -->
 
 
 
@@ -1734,4 +1766,4 @@
 
 </body>
 
-</html>
+</html> 
