Complete Navbar & Add some animation on Navbar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="65">
 
     <!-- Preloader  -->
 
@@ -1728,6 +1728,13 @@
             </div>
         </div>
 
+        <!-- back to top -->
+        <a href="#home" id="back-to-top" class="btn btn-sm btn-yellow btn-back-to-top" title="home" role="button">
+
+            <i class="fa fa-angle-up"></i>
+
+        </a>
+
     </footer>
     <!-- Footer End -->
 
@@ -1766,4 +1773,4 @@
 
 </body>
 
-</html> 
+</html>
