--- a/index.html
+++ b/index.html
@@ -1662,26 +1662,26 @@
 
 
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 col-sm-6">
                                         <div class="form-group">
                                             <input type="text" class="form-control" id="name" placeholder="Your Name">
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 col-sm-6">
                                         <div class="form-group">
                                             <input type="email" class="form-control" id="email"
                                                 placeholder="Email Address">
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 col-sm-6">
                                         <div class="form-group">
                                             <input type="text" class="form-control" id="phone" placeholder="Phoen No.">
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 col-sm-6">
                                         <div class="form-group">
                                             <input type="Text" class="form-control" id="subject" placeholder="Subject">
                                         </div>
