added mobile menu for extra small devices

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="65">
 
     <!-- Preloader  -->
-
     <div id="preloader">
         <div id="status">&nbsp;</div>
     </div>
@@ -58,6 +57,10 @@
                 <div class="site-nav-wrapper">
 
                     <div class="navbar-header">
+
+                        <!-- Mobile Menue Open Button -->
+                        <span id="mobile-nav-open-btn">&#9776;</span>
+
                         <!-- Logo -->
                         <a href="#home" class="navbar-brand">
                             <img src="img/logo/logo.png" alt="logo">
@@ -78,6 +81,26 @@
                             </ul>
                         </div>
                     </div>
+
+                    <!-- mobile menu -->
+                    <div id="mobile-nav">
+                        <!-- Mobile Menue Open Button --> 
+                        <span id="mobile-nav-close-btn">&times;</span>
+                        <div id="mobile-nav-content">
+
+                            <ul class="nav">
+                                <li><a href="#home">Home</a></li>
+                                <li><a href="#about">About</a></li>
+                                <li><a href="#team">Team</a></li>
+                                <li><a href="#services">Services</a></li>
+                                <li><a href="#portfolio">Work</a></li>
+                                <li><a href="#blog">Blog</a></li>
+                                <li><a href="#contact">Contact</a></li>
+                            </ul>
+
+                        </div>
+                    </div>
+
 
                 </div>
             </div>
