add some animation on home section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <!-- Magnific Popup -->
     <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
 
+    <!-- Animate css -->
+    <link rel="stylesheet" href="css/animate/animate.css">
+
     <!--Custom css-->
     <link rel="stylesheet" href="css/style.css">
 
@@ -1806,6 +1809,10 @@
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTvQQzglGUKwhoVJu2nbQWzXgP2TL0Y8o">
     </script>
+
+    <!-- WOW JS -->
+    <script src="js/wow/wow.min.js"></script>
+
     <!-- Java Scrip link  -->
     <script src="js/script.js"></script>
 
